<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activity_background"
    tools:context="fi.babywellness.babyhale.InformationActivity">

    <include
        layout="@layout/toolbar_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/page_edge_padding">

            <TextView
                android:text="@string/tobaccoInfoHeader1"
                android:layout_marginBottom="24dp"
                style="@style/Text.Title" />

            <TextView
                android:text="@string/tobaccoInfoText1"
                android:layout_marginBottom="24dp"
                style="@style/Text.Body1" />

            <TextView
                android:text="@string/tobaccoInfoHeader2"
                android:layout_marginBottom="24dp"
                style="@style/Text.Title" />

            <TextView
                android:text="@string/tobaccoInfoText2"
                style="@style/Text.Body1" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
