<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/page_edge_padding">

        <TextView
            android:id="@+id/productTitle"
            style="@style/Text.Headline.Bold" />

        <TextView
            android:id="@+id/productSubTitle"
            android:layout_marginBottom="48dp"
            style="@style/Text.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_edge_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/classification_pregnancy"
                style="@style/Text.Body2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/classification_lactation"
                style="@style/Text.Body2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_edge_padding"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/pregnancy_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/lactation_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_edge_padding"
            android:text="@string/pregnancy_explanation_title"
            style="@style/Text.Body2" />

        <TextView
            android:id="@+id/pregnancy_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/page_edge_padding"
            android:text="@string/lactation_explanation_title"
            style="@style/Text.Body2" />

        <TextView
            android:id="@+id/lactation_explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
